Add semantic search stats
